Fixed spacing in tx edit views, fixed month saving calculation

--- a/src/site/components/EditTransactionView/EditTransactionView.scss
+++ b/src/site/components/EditTransactionView/EditTransactionView.scss
@@ -15,6 +15,11 @@
     width: 100%;
   }
   
+  .extraGroup {
+    width: 100%;
+    padding-bottom: 12px;
+  }
+
   .buttonsGroup {
     display: flex;
     padding-top: 12px;
